# Selman

./: pyproject.toml  pyrightconfig.json
scripts/: flow.py  printer.py  selman.py
src/selman/: __init__.py  ansi_control.py  core.py  flow.py  printer.py
test/: assets.py  entry.py
