[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "selman"
version = "0.1.0"
description = "Selection manager & TUI helpers"
authors = [{ name = "Dotoro", email = "alderwood903@gmail.com" }]
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["tui", "cli", "selection", "ansi"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Typing :: Typed",
]

dependencies = []

[project.urls]
Homepage = "https://github.com/Dotoro/Selman"


[tool.hatch.build]
packages = ["src/selman"]
include = ["src/selman/py.typed"]
